goinception-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: goinception
  name: goinception
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: goinception
    spec:
      containers:
      - image: hanchuanchuan/goinception
        name: goinception
        resources: {}
        volumeMounts:
        - mountPath: /etc/config.toml
          name: goinception-claim0
      restartPolicy: Always
      volumes:
      - name: goinception-claim0
        persistentVolumeClaim:
          claimName: goinception-claim0
status: {}
