mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: archery
        - name: MYSQL_ROOT_PASSWORD
          value: "123456"
        image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /etc/mysql/my.cnf
          name: mysql-claim0
        - mountPath: /var/lib/mysql
          name: mysql-claim1
      restartPolicy: Always
      volumes:
      - name: mysql-claim0
        persistentVolumeClaim:
          claimName: mysql-claim0
      - name: mysql-claim1
        persistentVolumeClaim:
          claimName: mysql-claim1
status: {}
