archery-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: archery
  name: archery
spec:
  ports:
  - name: "9123"
    port: 9123
    targetPort: 9123
  selector:
    io.kompose.service: archery
status:
  loadBalancer: {}
