ingress-monitor.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: grafana
  namespace: monitor
spec:
  rules:
    - host: monitor.lgt.com
      http:
        paths:
          - backend:
              serviceName: prometheus-operator-grafana
              servicePort: service
            path: /
