ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: web-ui-archery
  namespace: archery 
spec:
  rules:
    - host: sql.lgong.com
      http:
        paths:
          - backend:
              serviceName: archery
              servicePort: web-http
            path: /
